# dfr_token_universe

./: README.md  pyproject.toml  requirements.txt  setup.py
data/: lorem_ipsum.txt  some_text.txt
dfrtokenuniverse/: constantes.py  splitter.py  word_inventory.py
dfrtokenuniverse/notebooks/: estudio_tokens.ipynb
notebooks/: estudio_tokens.ipynb  genera_tokens.ipynb  test_general.ipynb
