[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dfrtokenuniverse"
version = "0.1.0"
description = "Una librería para gestionar tokens en NLP"
authors = [
    {name = "df.roibas", email = "df.roibas@gmail.com"}
]
license = {text = "GNU"}
dependencies = ["re", "numpy>=1.21.0", "pandas>=1.3.0"]  # Dependencias principales

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
